[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
reqwest = "0.11.12"
config = "0.13.2"
serde = {version = "1.0.145", features=["derive"]}
tokio = {version = "1.21.2", features=["macros"]}

[dependencies.sqlx]
version = '0.6'
default-features = false
features = ["runtime-actix-native-tls", "macros", "postgres", "uuid", "chrono", "migrate"]
